move logic from controller layer to service;